<resources>
  <string name="app_name">Hampi</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="share">Share</string>
  <string name="settings">Settings</string>
  <string name="web_client_id"> 660294914082-mp02mdpes2q756r4as82kqhvg2d9lksf.apps.googleusercontent.com</string>
  <string name="loading">loading…</string>
  <string name="care_for_others">Care for others</string>
  <string name="application_icon">application icon</string>
  <string name="Create_Entry">Create Entry</string>
  <string name="plant_name">Plant name</string>
  <string name="take_picture">Take Picture</string>
  <string name="save">Save</string>
  <string name="OK">OK</string>
  <string name="Select_one_option">Select one option</string>
  <string name="plant_selected_image">Plant Selected Image</string>
  <string name="Upload_photo_error">Upload Photo Error</string>
  <string name="Upload_entry_error">Upload Entry Error</string>
  <string name="Unable_to_upload_your_photo_Please_try_again">Unable to upload your photo. Please try again</string>
  <string name="Unable_to_upload_your_entry_Please_try_again">Unable to upload your entry. Please try again</string>
  <string name="Choose_from_library">Choose from library</string>
  <string name="description">Description</string>
  <string name="please_fill_the_plant_name">Please fill the plant name</string>
  <string name="Missing_photo">Missing photo</string>
  <string name="Please_add_a_photo">Please add a photo</string>
  <string name="plant_photo">plan photo</string>
  <string name="natural_medicine_for_everyone">natural medicine for everyone</string>
  <string-array name="add_photo_options_array">
    <item>Gallery</item>
    <item>Camera</item>
  </string-array>
</resources>
