<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="?attr/actionBarSize"
              android:orientation="vertical"
              android:padding="15dp">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="180dp"
      android:contentDescription="@string/plant_selected_image"
      android:src="@drawable/add_photo" />


  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/plant_name"
      android:inputType="text" />


  <Button
      android:id="@+id/save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:layout_marginTop="20dp"
      android:text="@string/save"
      android:theme="@style/Theme.AppCompat" />


</LinearLayout>